--- a/section_4_devworkflow/package.json
+++ b/section_4_devworkflow/package.json
@@ -9,5 +9,8 @@
     "start-server": "node app.js"
   },
   "author": "ABC",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
