--- a/section_10_database_sql/package.json
+++ b/section_10_database_sql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "section_10_databases_sql",
+  "name": "section_9_dynamic_routes",
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
   "main": "app.js",
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mysql2": "^2.0.0",
     "pug": "^2.0.3"
   }
 }
