--- a/section_20_files/package.json
+++ b/section_20_files/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.3.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.2.17",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
