--- a/section_23_adding_payments/package.json
+++ b/section_23_adding_payments/package.json
@@ -8,14 +8,16 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Brian Andere",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "braintree": "^2.21.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
     "csurf": "^1.10.0",
@@ -32,6 +34,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "stripe": "^8.0.1"
   }
 }
