--- a/section_24_REST_APIs_Basics/package.json
+++ b/section_24_REST_APIs_Basics/package.json
@@ -1,40 +1,19 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "section_24_rest_apis_basics",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "NodeJS Rest APIs Basics - App",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "nodemon app.js"
   },
-  "author": "Brian Andere",
+  "author": "Andere Brian",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.18.3"
-  },
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "braintree": "^2.21.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.0.3",
-    "csurf": "^1.10.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "express-validator": "^6.3.0",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.2.17",
-    "multer": "^1.4.2",
-    "mysql2": "^1.6.1",
-    "nodemailer": "^6.4.1",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pdfkit": "^0.11.0",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11",
-    "stripe": "^8.0.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
