--- a/section_29_deployment/shopapp/package.json
+++ b/section_29_deployment/shopapp/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^6.3.0",
+    "helmet": "^3.21.3",
     "mongodb": "^3.4.0",
     "mongoose": "^5.2.17",
     "multer": "^1.4.2",
