--- a/section_29_deployment/shopapp/package.json
+++ b/section_29_deployment/shopapp/package.json
@@ -31,6 +31,7 @@
     "helmet": "^3.21.3",
     "mongodb": "^3.4.0",
     "mongoose": "^5.2.17",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.1",
