--- a/section_29_deployment/shopapp/package.json
+++ b/section_29_deployment/shopapp/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
   "main": "app.js",
+  "engines": {
+    "node":"10.17.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production MONGO_URI='mongodb+srv://abcnodejs:nodejs-complete@cluster0-h0swz.mongodb.net/shop?retryWrites=true&w=majority' PAYPAL_BUS_CLIENT_ID='AfsWxOVCxeqaqAC-9KeRrDeGZYCeQGY_lRxfgyxPbC4zGvB9TxF-dbn4ZIVIqXlZCmoy1z62poMgR7j-' PAYPAL_BUS_CLIENT_SECRET='ELaSLwTJ-a2exxXF7T9RXS7tqBTCRTHoTQ6mrY-WUK8c4HqwkGYbz6lFZv9oqM_73ABKGuLdzLCjTw9W' SENDGRID_API_KEY='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' PORT=3000 node app.js",
